[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/PauseUI.gd" type="Script" id=1]
[ext_resource path="res://Font/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/PauseIcon.png" type="Texture" id=3]
[ext_resource path="res://UI/PauseText.png" type="Texture" id=4]
[ext_resource path="res://UI/ButtonStyles/press_styleboxtexture.tres" type="StyleBox" id=5]
[ext_resource path="res://UI/ButtonStyles/hover_styleboxtexture.tres" type="StyleBox" id=6]
[ext_resource path="res://UI/ButtonStyles/normal_styleboxtexture.tres" type="StyleBox" id=7]
[ext_resource path="res://Music and Sounds/Pause.wav" type="AudioStream" id=8]
[ext_resource path="res://Music and Sounds/Menu Select.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=9]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 9 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=10]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 10 )

[sub_resource type="StyleBoxEmpty" id=8]

[node name="PauseUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="ButtonResume" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = 22.0
margin_right = -8.0
margin_bottom = 38.0
theme = SubResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "Resume"

[node name="ButtonQuit" type="Button" parent="."]
margin_left = 168.0
margin_top = 112.0
margin_right = 216.0
margin_bottom = 128.0
theme = SubResource( 6 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = ExtResource( 7 )
text = "Quit"

[node name="PauseIcon" type="TextureRect" parent="."]
margin_left = 280.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 40.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -25.0
margin_right = 37.0
margin_bottom = -1.0
texture = ExtResource( 4 )
expand = true

[node name="PauseAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ButtonAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="pressed" from="ButtonResume" to="." method="_on_ButtonResume_pressed"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
